guess leaf--name as major-mode in :mode like keyword

--- a/README.org
+++ b/README.org
@@ -1022,7 +1022,17 @@ If you want to specify major-mode, pass dotted pair value.
          (autoload #'web-strict-mode "web-mode" nil t)
          (add-to-list 'auto-mode-alist '("\\.html\\'" . web-mode))
          (add-to-list 'auto-mode-alist '("\\.js\\'" . web-strict-mode))
-         (add-to-list 'auto-mode-alist '("\\.p?html?\\'" . web-strict-mode))))))
+         (add-to-list 'auto-mode-alist '("\\.p?html?\\'" . web-strict-mode))))
+
+
+      ;; if package symbol suffix doesn't suffix '-mode', add '-mode'
+      ((leaf gnuplot
+         :mode "\\.gp$")
+       (prog1 'gnuplot
+         (unless (fboundp 'gnuplot-mode)
+           (autoload #'gnuplot-mode "gnuplot" nil t))
+         (declare-function gnuplot-mode "gnuplot")
+         (add-to-list 'auto-mode-alist '("\\.gp$" . gnuplot-mode))))))
 
   (cort-deftest-with-macroexpand leaf/interpreter
     '(
