Make old :minor-mode work as :global-minor-mode

--- a/README.org
+++ b/README.org
@@ -42,7 +42,7 @@
 - [[#documentation-keywords][Documentation keywords]]
   - [[#doc-tag-file-url-keywords][:doc, :tag, :file, :url keywords]]
 - [[#misc-keywords][Misc keywords]]
-  - [[#minor-mode-keyword][:minor-mode keyword]]
+  - [[#global-minor-mode-keyword][:global-minor-mode keyword]]
   - [[#advice-advice-remove-keywords][:advice, :advice-remove keywords]]
   - [[#pl-pre-setq-pl-setq-pl-setq-default-pl-custom-keywords][:pl-pre-setq, :pl-setq, :pl-setq-default, :pl-custom keywords]]
 - [[#system-keywords][System keywords]]
@@ -106,7 +106,7 @@ Currently, ~leaf.el~ and ~leaf-keywords.el~ has below rich keywords.
   ;;    :leaf-defer
   ;;    :config
   ;;    :diminish :delight
-  ;;    :minor-mode
+  ;;    :global-minor-mode
   ;;    :setq :setq-default
   ;;    :pl-setq :auth-setq :pl-setq-default :auth-setq-default)
 #+end_src
@@ -1526,9 +1526,9 @@ The arguments specified for this keyword have no effect on the result of the con
          (leaf-init)))))
 #+END_SRC
 * Misc keywords
-** :minor-mode keyword
-~:minor-mode~ keyword provides a front end to easily enable minor mode.
-Minor-mode is followed by ~-mode~ and has the custom of being activated by passing a ~1~,
+** :global-minor-mode keyword
+~:global-minor-mode~ keyword provides a front end to easily enable minor mode.
+global-minor-mode is followed by ~-mode~ and has the custom of being activated by passing a ~1~,
 so make the possible guesses accordingly.
 
 The former guess, given ~t~, the mode in which you want ~leaf--name~ to be valid.
@@ -1538,31 +1538,31 @@ For this reason, a minor mode without ~-mode~ can not use this keyword. Please u
 If the latter requires ~t~ to be valid, the value can be explicitly specified using the ~cdr~ of the cons cell.
 
 #+begin_src emacs-lisp
-  (cort-deftest-with-macroexpand leaf/minor-mode
+  (cort-deftest-with-macroexpand leaf/global-minor-mode
     '(
       ;; symbol will be accepted
       ((leaf autorevert
-         :minor-mode global-auto-revert-mode)
+         :global-minor-mode global-auto-revert-mode)
        (prog1 'autorevert
          (global-auto-revert-mode 1)))
 
       ;; multi strings will be accepted
       ((leaf autorevert
-         :minor-mode global-auto-revert-mode show-paren-mode)
+         :global-minor-mode global-auto-revert-mode show-paren-mode)
        (prog1 'autorevert
          (global-auto-revert-mode 1)
          (show-paren-mode 1)))
 
       ;; multi strings in list will be accepted
       ((leaf autorevert
-         :minor-mode (global-auto-revert-mode show-paren-mode))
+         :global-minor-mode (global-auto-revert-mode show-paren-mode))
        (prog1 'autorevert
          (global-auto-revert-mode 1)
          (show-paren-mode 1)))
 
       ;; cons-cell will be accepted
       ((leaf autorevert
-         :minor-mode ((global-auto-revert-mode . t)
+         :global-minor-mode ((global-auto-revert-mode . t)
                       (show-paren-mode . t)))
        (prog1 'autorevert
          (global-auto-revert-mode t)
@@ -1570,14 +1570,14 @@ If the latter requires ~t~ to be valid, the value can be explicitly specified us
 
       ;; distribution feature is supported
       ((leaf autorevert
-         :minor-mode ((show-paren-mode global-auto-revert-mode) . t))
+         :global-minor-mode ((show-paren-mode global-auto-revert-mode) . t))
        (prog1 'autorevert
          (show-paren-mode t)
          (global-auto-revert-mode t)))
 
       ;; mix specification will be accepted
       ((leaf autorevert
-         :minor-mode (auto-insert-mode
+         :global-minor-mode (auto-insert-mode
                       (show-paren-mode global-auto-revert-mode) . t))
        (prog1 'autorevert
          (auto-insert-mode t)
@@ -1586,13 +1586,13 @@ If the latter requires ~t~ to be valid, the value can be explicitly specified us
 
       ;; t will convert leaf--name, and suffix 'mode'
       ((leaf autorevert
-         :minor-mode t)
+         :global-minor-mode t)
        (prog1 'autorevert
          (autorevert-mode 1)))
 
       ;; symbol not suffix 'mode', add 'mode' suffix
       ((leaf autorevert
-         :minor-mode autorevert)
+         :global-minor-mode autorevert)
        (prog1 'autorevert
          (autorevert-mode 1)))))
 #+end_src
