--- a/README.org
+++ b/README.org
@@ -2343,6 +2343,7 @@ If you want to request explicitly use the ~:require t~ flag.
 - KeenS ([[https://github.com/KeenS][κeen]])
 - Dario Gjorgjevski ([[https://github.com/d125q][d125q]])
 - Masanori Mano ([[https://github.com/grugrut][grugrut]])
+- Thomas Padioleau ([[https://github.com/tpadioleau][tpadioleau]])
 
 ** Special Thanks
 Advice and comments given by [[http://emacs-jp.github.io/][Emacs-JP]]'s forum member has been a great help  in developing ~leaf.el~.
